Add CSS styling to App, Header and Footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-.App {
-  text-align: center;
-}
+/* .App {
+  background-color: #282c34;
+  color: #fff;
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -11,4 +12,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
