Add CSS styling to MovieContainer and Movie

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-/* .App {
-  background-color: #282c34;
-  color: #fff;
-} */
+.App {
+  background-color: black;
+}
 
 /* .App-header {
   background-color: #282c34;
