--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  
 }
 
 body {
@@ -8,9 +9,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow: hidden; */
 }
-
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
