Add error handling

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   /* overflow: hidden; */
 }
 
+h2 {
+  height: 12vh;
+  margin: 250px;
+  text-align: center;
+  color:white;
+}
+
 /* .App-header {
   background-color: #282c34;
   min-height: 100vh;
