Add error handling for router

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   background-color: black;
 }
 
-h2 {
+/* h2 {
   height: 12vh;
   margin: 250px;
   text-align: center;
   color: white;
-}
+} */
 
 /* .App-header {
   background-color: #282c34;
