--- a/src/MovieDetails.css
+++ b/src/MovieDetails.css
@@ -1,24 +1,134 @@
-.movie-details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    height: 86vh;
-    width: 100vw;
-    overflow: hidden;
+@media only screen and (min-width: 250px) {
+    .movie-details {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px;
+    }
+
+    section {
+        color: #fff;
+    }
+    
+    .movie-image {
+        width: 20em;
+        margin-top: 7px;
+    }
+    
+    .description {
+        width: 350px;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+    .movie-details-container {
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .info-mask {
+    
+        background: black;
+        width: 100%;
+        height: 100%;
+        opacity: 85%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-position: center;
+        background-size: cover;
+    
+    }
 }
 
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    color: #fff;
+@media only screen and (min-width: 750px) {
+    
+    .movie-details {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 83vh;
+        width: 100vw;
+        overflow: hidden;
+    }
+
+    section {
+        color: #fff;
+    }
+
+    .movie-image {
+        height: 30em;
+        width: 22em;
+    }
+
+    .description {
+        width: 400px;
+        height: 500px;
+        margin: 10px 0px 0px 20px;
+    }
+
+    .movie-details-container {
+        background-size: cover;
+    }
+
+    .info-mask {
+        background: black;
+        width: 100%;
+        height: 100%;
+        opacity: 85%;
+        display: flex;
+    }
 }
 
-.movie-image {
-    height: 30em;
-    width: 22em;
-    margin-top: 70px;
-    border-radius: 1vh;
+@media only screen and (min-width: 1000px) {
+    .movie-details {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 86vh;
+        width: 100vw;
+        overflow: hidden;
+    }
 
+    section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        color: #fff;
+    }
+
+    .movie-image {
+        height: 30em;
+        width: 22em;
+        margin-top: 70px;
+        border-radius: 1vh;
+    }
+
+    .description {
+        width: 400px;
+        height: 500px;
+        margin: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .movie-details-container {
+        background-size: cover;
+    }
+
+    .info-mask {
+        background: black;
+        width: 100%;
+        height: 100%;
+        opacity: 85%;
+        display: flex;
+    }
 }
