--- a/src/Header.css
+++ b/src/Header.css
@@ -1,9 +1,11 @@
 header {
-  background-color: red;
-  color: #fff;
+  background-color: #670019;
+  color: #cdcdcd;
+  text-shadow: 2px 2px 5px #000000;
+  font-family: 'Indie Flower', cursive;
 }
 
 .title {
-  padding: 20px;
+  padding: 5px 0 0 25px;
   font-size: 45px;
 }
