Add styling to button

--- a/src/Header.css
+++ b/src/Header.css
@@ -2,10 +2,16 @@ header {
   background-color: #670019;
   color: #cdcdcd;
   text-shadow: 2px 2px 5px #000000;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Karla', sans-serif;
+  display: flex;
+  align-items: center;
 }
 
 .title {
-  padding: 5px 0 0 25px;
-  font-size: 45px;
+  font-size: 40px;
+}
+
+.header-img {
+  max-width: 43px;
+  padding: 10px;
 }
