Organize the components in a main compnent folder

--- a/src/Components/MovieDetails/MovieDetails.css
+++ b/src/Components/MovieDetails/MovieDetails.css
@@ -73,5 +73,5 @@ button {
 button:hover {
     background-color: #670019;
     color: #fff;
-    box-shadow: 0 5px 5px 0 rgba(255,255,255,0.24);
-  }
+    box-shadow: 0 5px 5px 0 rgba(255, 255, 255, 0.24);
+}
